# HDU_C_Task

./: .gitignore  CMakeLists.txt  README.md  main.c
cli/: cli.c  cli.h
dal/: db.c  db.h
src/: cli.c  cli.h  dal.c  dal.h  handler.c  handler.h  main.c  model.h  test_data.c  test_data.h  utils.c  utils.h
src/handler/: employee_handler.c  employee_handler.h  handler.c  handler.h  product_handler.c  product_handler.h  report_handler.c  report_handler.h  sale_handler.c  sale_handler.h
src/handler/employee/: employee_handler.c  employee_handler.h
src/handler/product/: product_handler.c  product_handler.h
src/handler/report/: report_handler.c  report_handler.h
src/handler/sale/: sale_handler.c  sale_handler.h
